src/objects/Content_Pack__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Opportunity__r.AccountId , Opportunity__r.Account.Name , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Content_Team_Due_Date__c</fullName>
        <label>Content Team Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Status__c</fullName>
        <label>Design Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_PowerPoint_to_be_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing PowerPoint to be Modified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fees_Per_Day__c</fullName>
        <formula>Opportunity__r.Fee_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fees Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logo_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logo Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Content_Items__c</fullName>
        <label>Number of Content Items</label>
        <summaryForeignKey>Content_Item__c.Content_Pack__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opp Won?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Content Packs</relationshipLabel>
        <relationshipName>Content_Packs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Powerpoint_Due_Date__c</fullName>
        <label>Powerpoint Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Powerpoint_Needed__c</fullName>
        <label>Powerpoint Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Needed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Powerpoint_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Powerpoint Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Packs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Sales Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Content_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Content Designer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Packs_Designer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Production_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Production Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Packs_Producer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Due_Date__c</fullName>
        <label>Production Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Status__c</fullName>
        <label>Production Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Title__c</fullName>
        <label>Program Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_from_Product_Selector__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removed from Product Selector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requires_Client_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Client Review?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_Faculty__c</fullName>
        <label>Sent to Faculty</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_to_Trainer__c</fullName>
        <label>Sent to Trainer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Formatting_Instructions__c</fullName>
        <label>Special Formatting Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <inlineHelpText>Cost per day of training</inlineHelpText>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Content Pack</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Production_Status__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Requires_Client_Review__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>KMPG</label>
    </listViews>
    <listViews>
        <fullName>All_Content_Packs_Ever</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Content Packs Ever</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Content_Packs</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Requested_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Content Packs</label>
    </listViews>
    <listViews>
        <fullName>Content_Packs_WITHOUT_items</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Design_Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_of_Content_Items__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Stage__c</field>
            <operation>contains</operation>
            <value>won</value>
        </filters>
        <label>Content Packs WITHOUT items</label>
    </listViews>
    <listViews>
        <fullName>Operations_PowerPoints_Needed</fullName>
        <columns>NAME</columns>
        <columns>Powerpoint_Needed__c</columns>
        <columns>Opportunity__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Content_Team_Due_Date__c</columns>
        <columns>Production_Due_Date__c</columns>
        <columns>Primary_Content_Designer__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Design_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Powerpoint_Needed__c</field>
            <operation>equals</operation>
            <value>Needed,Pre-Existing</value>
        </filters>
        <filters>
            <field>Design_Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <label>Operations - PowerPoints Needed</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>by_Account</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Number_of_Content_Items__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Johns Hopkins University HQ</value>
        </filters>
        <label>by Account</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Content Pack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Packs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>